<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    tools:context=".assistant.AssistantDrawerUI">

    <ProgressBar
        android:id="@+id/activityIndicator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:indeterminateTint="@android:color/white"
        android:indeterminateOnly="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

<LinearLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0">
    <LinearLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/assistantAvatarBackgroundContainerLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <ImageView
                    android:id="@+id/assistantAvatarImageView"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:visibility="gone"/>
            </LinearLayout>

            <TextView
                android:id="@+id/assistantNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginLeft="8dp">

            </TextView>
            <TextView
                android:id="@+id/drawerWelcomeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic" />

            <Space
                android:id="@+id/headerSpace"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <LinearLayout
                android:id="@+id/closeAssistantBackgroundContainerLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/closeAssistantImageView"
                    android:layout_width="25dp"
                    android:layout_height="25dp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/closeAssistantNoInternetImageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/close_assistant"
                android:visibility="gone"/>
        </LinearLayout>
        <View
            android:id="@+id/bodyBorderTopView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:visibility="gone"
            />
        <LinearLayout
            android:id="@+id/bodyContainerLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:orientation="vertical">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/messagesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingHorizontal="12dp"
                android:paddingBottom="16dp"
                android:visibility="gone"
                android:orientation="vertical">
            </androidx.recyclerview.widget.RecyclerView>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hintsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
        <View
            android:id="@+id/bodyBorderBottomView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:visibility="gone"
            />
        <LinearLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/drawerBodyLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/speakingAnimation"
                    android:layout_width="match_parent"
                    android:layout_marginVertical="10dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="24dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">
                    <View
                        android:id="@+id/speakingAnimationBar1"
                        android:layout_width="4dp"
                        android:layout_height="1dp"
                        android:layout_marginLeft="4dp"
                        android:layout_gravity="bottom">
                    </View>
                    <View
                        android:id="@+id/speakingAnimationBar2"
                        android:layout_width="4dp"
                        android:layout_height="1dp"
                        android:layout_marginLeft="4dp"
                        android:layout_gravity="bottom">
                    </View>

                    <View
                        android:id="@+id/speakingAnimationBar3"
                        android:layout_width="4dp"
                        android:layout_height="1dp"
                        android:layout_marginLeft="4dp"
                        android:layout_gravity="bottom" />
                    <View
                        android:id="@+id/speakingAnimationBar4"
                        android:layout_width="4dp"
                        android:layout_height="1dp"
                        android:layout_marginLeft="4dp"
                        android:layout_gravity="bottom" />
                    <View
                        android:id="@+id/speakingAnimationBar5"
                        android:layout_width="4dp"
                        android:layout_height="1dp"
                        android:layout_marginLeft="4dp"
                        android:layout_gravity="bottom" />
                    <View
                        android:id="@+id/speakingAnimationBar6"
                        android:layout_width="4dp"
                        android:layout_height="1dp"
                        android:layout_marginLeft="4dp"
                        android:layout_gravity="bottom" />
                    <View
                        android:id="@+id/speakingAnimationBar7"
                        android:layout_width="4dp"
                        android:layout_height="1dp"
                        android:layout_marginLeft="4dp"
                        android:layout_gravity="bottom" />
                    <View
                        android:id="@+id/speakingAnimationBar8"
                        android:layout_width="4dp"
                        android:layout_height="1dp"
                        android:layout_marginLeft="4dp"
                        android:layout_gravity="bottom" />
                </LinearLayout>

                <TextView
                    android:id="@+id/assistantStateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/spokenTextView"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:padding="8dp"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/dashedLineImageView"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="20dp"
                android:layerType="software"
                android:src="@drawable/dotted_line" />

            <LinearLayout
                android:id="@+id/drawerFooterLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/speakLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/speakTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/speak" />

                    <ImageView
                        android:id="@+id/micImageView"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="12dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/typeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/typeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TYPE"
                        android:textColor="#3E77A5"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:id="@+id/sendTextLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:orientation="horizontal"
                        android:paddingTop="8dp"
                        android:paddingBottom="2dp"
                        android:paddingHorizontal="8dp">

                        <EditText
                            android:id="@+id/inputTextMessage"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="textPersonName" />

                        <ImageView
                            android:id="@+id/sendMessageButtonImageView"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>