<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/relative_container">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.VoicifyAssistantSample.AppBarOverlay"/>

    <Button
        android:id="@+id/assistantMic"
        android:layout_width="124dp"
        android:layout_height="100dp"
        android:text="Click Me To Open Assistant" />

    <TextView
        android:id="@+id/nowPlayingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="14sp">

    </TextView>

</LinearLayout>