<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/messagesContainerLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Space
        android:id="@+id/messagesSpace"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="gone"/>
    <LinearLayout
        android:id="@+id/assistantAvatarBackgroundLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <ImageView
            android:id="@+id/messagesAssistantAvatarImageView"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:visibility="gone"/>
        </LinearLayout>
    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>